syntax = "proto3";

package meshtrade.compliance.client.v1;

import "meshtrade/compliance/client/v1/kyb_info.proto";
import "meshtrade/compliance/client/v1/kyc_info.proto";
import "meshtrade/type/v1/contact_details.proto";

option go_package = "github.com/meshtrade/api/go/compliance/client/v1;clientv1";

// Client is an authorised legal entity, individual or business (company, trust etc.).
// Clients resources (accounts, instruments etc.) are owned by an associated group
// hierarchy containing at least 1 group (the default 'top level' group of the client).
message Client {
  // Name the unique name of the client resource and takes on the format:
  // clients/<<owner_group_id>>/<client_id>
  //
  // FIXME: consider if it is fine for this to be able to change if
  // the group owner changes. An external system my have stored this as
  // a unique reference in their system!! It is not reasonable to consider
  // that they would have ownly stored the last bit of this string.
  //
  // System Generated - Populated on Creation.
  string name = 1;

  // Display name is a non-unique name field.
  //
  // Required
  string display_name = 2;

  // Info, either KYC or KYB (indicating that client is an individual or a company)
  // ONCE KYC or KYB info is provided the field cannot be changed again
  //
  // Required
  oneof info {
    meshtrade.compliance.client.v1.KYCInfo kyc_info = 3;

    meshtrade.compliance.client.v1.KYBInfo kyb_info = 4;
  }

  // Contact details of the client.
  // Required
  meshtrade.type.v1.ContactDetails contact_details = 5;
}
